# data_aggregation

./: .gitignore  CDataBase.cpp  CDataBase.h  CMakeLists.txt  CRequest.cpp  CRequest.h  README.md  main.cpp
